--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
- 
+  "start": "node app.js",
   "scripts": {
-    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,9 +12,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "dotenv": "^16.0.3",
-    "ejs": "^2.6.1",
+    "ejs": "^3.1.8",
     "express": "^4.16.3",
     "lodash": "^4.17.21",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "nodemon": "^2.0.20"
   }
 }
